schema/testdata/validation_permission_attribute_invalid_roles/schema.keel
model Person {
    actions {
        get getPerson(id)
    }
    @permission(
        roles: [NotValidRole],
        actions: [get]
    )
    @permission(
        roles: 1234,
        actions: [get]
    )
    @permission(
        roles: "1234",
        actions: [get]
    )
    @permission(
        roles: ["thisisnotvalid"],
        actions: [get]
    )
}

role Admin {
    domains {
        "myorg.com"
    }
}